add copyright notices

--- a/goscope/static/html/footer.html
+++ b/goscope/static/html/footer.html
@@ -1,3 +1,8 @@
+<!--
+    License: MIT
+    Authors:
+        - Josep Bigorra (averageflow)
+-->
 <br/>
 <p>Made with ❤️ by <a class="navbar-link" target="_blank" rel="noopener noreferrer"
                            href="https://github.com/averageflow">@averageflow</a>
