--- a/goscope/static/html/head.html
+++ b/goscope/static/html/head.html
@@ -1,3 +1,8 @@
+<!--
+    License: MIT
+    Authors:
+        - Josep Bigorra (averageflow)
+-->
 <meta charset="UTF-8">
 <title>{{.APPLICATION_NAME}} - GoScope</title>
 <link href="https://cdn.jsdelivr.net/gh/tretapey/raisincss@1.1.0/raisin.min.css" rel="stylesheet"/>
