--- a/goscope/static/html/common_navbar.html
+++ b/goscope/static/html/common_navbar.html
@@ -29,6 +29,14 @@
             Logs
         </h3>
     </a>
+    <a id="sysinfo-link" class="navbar-link" href="/goscope/info" target="_blank" rel="noopener noreferrer">
+        <h3 style="margin: 0.7em;line-height: initial;" class="flex font-l">
+            <svg style="width:1.3em;height:1.3em;" class="svg-icon" viewBox="0 0 20 20">
+                <path id="sysinfo-symbol" d="M17.431,2.156h-3.715c-0.228,0-0.413,0.186-0.413,0.413v6.973h-2.89V6.687c0-0.229-0.186-0.413-0.413-0.413H6.285c-0.228,0-0.413,0.184-0.413,0.413v6.388H2.569c-0.227,0-0.413,0.187-0.413,0.413v3.942c0,0.228,0.186,0.413,0.413,0.413h14.862c0.228,0,0.413-0.186,0.413-0.413V2.569C17.844,2.342,17.658,2.156,17.431,2.156 M5.872,17.019h-2.89v-3.117h2.89V17.019zM9.587,17.019h-2.89V7.1h2.89V17.019z M13.303,17.019h-2.89v-6.651h2.89V17.019z M17.019,17.019h-2.891V2.982h2.891V17.019z"></path>
+            </svg>
+            System
+        </h3>
+    </a>
     <input placeholder="Search ..." id="search-input" class="md:p-2 l:p2 m-3 search-input" type="search">
     <button id="search-button" style="border:none;">
         <svg class="eye-image svg-icon" style="width:2em;height:2em;" viewBox="0 0 20 20">
