--- a/goscope/static/html/request_dashboard.html
+++ b/goscope/static/html/request_dashboard.html
@@ -13,7 +13,7 @@
 <body>
 {{.COMMON_NAVBAR}}
 <div class="m-1 p-1 text-center">
-    <table id="request-table" style="line-height: 1.6em; margin: 0 auto;">
+    <table id="request-table" class="goscope-entries-table">
     </table>
     <div>
         <button id="prev-page" class="paginate-button">
