change footer to ensure contributors are equally represented

--- a/goscope/static/html/common_footer.html
+++ b/goscope/static/html/common_footer.html
@@ -4,6 +4,6 @@
         - Josep Bigorra (averageflow)
 -->
 <br/>
-<p>Made with ❤️ by <a class="navbar-link" target="_blank" rel="noopener noreferrer"
-                      href="https://github.com/averageflow">@averageflow</a>
+<p>Made with ❤️ and hosted on <a class="navbar-link" target="_blank" rel="noopener noreferrer"
+                      href="https://github.com/averageflow/goscope">GitHub</a>
 </p>
