--- a/goscope/static/html/common_navbar.html
+++ b/goscope/static/html/common_navbar.html
@@ -3,7 +3,8 @@
     Authors:
         - Josep Bigorra (averageflow)
 -->
-<div class="container mx-auto flex flex-row items-center">
+<div class="mb-3 goscope-background-700">
+<div class="container flex flex-row items-center">
     <div class="flex flex-row items-center py-3" style="flex-grow: 1">
         <h3 class="inline-block font-2xl mr-4">
             <svg class="svg-icon mr-1" viewBox="0 0 20 20">
@@ -54,4 +55,5 @@
             </svg>
         </button>
     </div>
+</div>
 </div>
