move files to a better location

--- a/static/html/common_navbar.html
+++ b/static/html/common_navbar.html
@@ -11,7 +11,7 @@
         {{.APPLICATION_NAME}}
     </h3>
 
-    <a id="requests-link" class="navbar-link" href="/goscope/">
+    <a id="requests-link" class="navbar-link" href="/goscope">
         <h3 class="flex">
             <svg class="svg-icon" viewBox="0 0 20 20">
                 <path id="requests-symbol"
