move static to root for better merge

--- a/static/html/common_navbar.html
+++ b/static/html/common_navbar.html
@@ -13,7 +13,7 @@
             {{.APPLICATION_NAME}}
         </h3>
 
-        <a id="requests-link" class="navbar-link navbar-link-hover mr-3" href="/goscope/">
+        <a id="requests-link" class="navbar-link navbar-link-hover mr-3" href="/goscope">
             <h3 class="flex">
                 <svg class="svg-icon navbar-link-svg-hover mr-1" viewBox="0 0 20 20">
                     <path id="requests-symbol"
