--- a/static/html/common_footer.html
+++ b/static/html/common_footer.html
@@ -3,7 +3,14 @@
     Authors:
         - Josep Bigorra (averageflow)
 -->
-<br/>
-<p>Made with ❤️ and hosted on <a class="navbar-link" target="_blank" rel="noopener noreferrer"
-                      href="https://github.com/averageflow/goscope">GitHub</a>
+<br />
+<p>
+	Made with ❤️ and hosted on
+	<a
+		class="navbar-link"
+		target="_blank"
+		rel="noopener noreferrer"
+		href="https://github.com/averageflow/goscope"
+		>GitHub</a
+	>
 </p>
