--- a/static/html/common_head.html
+++ b/static/html/common_head.html
@@ -3,9 +3,18 @@
     Authors:
         - Josep Bigorra (averageflow)
 -->
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>{{.APPLICATION_NAME}} - GoScope</title>
-<link href="https://cdn.jsdelivr.net/gh/tretapey/raisincss@1.1.0/raisin.min.css" rel="stylesheet"/>
-<link href="https://fonts.googleapis.com/css2?family=Manrope&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
+<link
+	href="https://cdn.jsdelivr.net/gh/tretapey/raisincss@1.1.0/raisin.min.css"
+	rel="stylesheet"
+/>
+<link
+	href="https://fonts.googleapis.com/css2?family=Manrope&display=swap"
+	rel="stylesheet"
+/>
+<link
+	href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap"
+	rel="stylesheet"
+/>
