Add prettier ignore statements

--- a/static/html/log_dashboard.html
+++ b/static/html/log_dashboard.html
@@ -7,7 +7,9 @@
 <html lang="en">
 <head>
     {{.COMMON_HEADER}}
+    <!-- prettier-ignore -->
     <style>{{.HIGHLIGHT_STYLES}}</style>
+    <!-- prettier-ignore -->
     <style>{{.GOSCOPE_STYLES}}</style>
 </head>
 <body>
