--- a/static/html/system_info.html
+++ b/static/html/system_info.html
@@ -7,8 +7,10 @@
 <html lang="en">
 <head>
     {{.COMMON_HEADER}}
+	<!-- prettier-ignore -->
     <style>{{.HIGHLIGHT_STYLES}}</style>
-    <style>{{.GOSCOPE_STYLES}}</style>
+	<!-- prettier-ignore -->
+	<style>{{.GOSCOPE_STYLES}}</style>
 </head>
 <body>
 <div class="m-3 p-3 text-center" style="line-height: 2em;">
