--- a/static/html/single_log.html
+++ b/static/html/single_log.html
@@ -16,12 +16,11 @@
 <div class="m-3 p-3 text-center" style="line-height: 2em;">
     <div class="md:w-2/3 lg:w-2/3 text-left" style="margin:0 auto;">
         <h1 class="font-xl m-2">Logged at {{.TIME}} - {{.APPLICATION_NAME}} - GoScope</h1>
-        <p>Time:
+        <p>Time:</p>
         <pre><code class="plaintext">{{.TIME}}</code></pre>
-        </p>
-        <p>Message:
+        
+        <p>Message:</p>
         <pre><code class="plaintext">{{.MESSAGE}}</code></pre>
-        </p>
     </div>
 </div>
 <script>{{.SINGLE_LOG}}</script>
