--- a/static/goscope/src/index.html
+++ b/static/goscope/src/index.html
@@ -6,15 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://cdn.jsdelivr.net/gh/tretapey/raisincss@1.1.0/raisin.min.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/dark.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Manrope&display=swap" rel="stylesheet">
-  <style>
-    body{
-      background: #1c1c1c;
-      color: #fff;
-      font-family: 'Manrope', 'sans-serif';
-    }
-  </style>
 </head>
 <body>
   <app-root></app-root>
