--- a/static/goscope/src/index.html
+++ b/static/goscope/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/dark.min.css">
+  <link rel="stylesheet" href="https://ghcdn.rawgit.org/kognise/water.css/b42974bb25c8fcd379048619704064dff3fb0908/dist/dark.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Manrope&display=swap" rel="stylesheet">
 </head>
 <body>
