--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="<%= BASE_URL %>css/dark.css">
-    <link rel="stylesheet" href="<%= BASE_URL %>css/custom.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>css/styles.css">
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
