--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="<%= BASE_URL %>css/dark.css">
     <link rel="stylesheet" href="<%= BASE_URL %>css/styles.css">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon-16x16.png">
+    <link rel="manifest" href="<%= BASE_URL %>site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
 <noscript>
