Improve application looks, relax lint

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="<%= BASE_URL %>css/dark.css">
     <link rel="stylesheet" href="<%= BASE_URL %>css/styles.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>css/code-blocks.css">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicon-32x32.png">
