--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link rel="stylesheet" href="<%= BASE_URL %>css/dark.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>css/light.css" media="(prefers-color-scheme: light)">
+    <link rel="stylesheet" href="<%= BASE_URL %>css/dark.css" media="(prefers-color-scheme: dark)">
     <link rel="stylesheet" href="<%= BASE_URL %>css/styles.css">
     <link rel="stylesheet" href="<%= BASE_URL %>css/code-blocks.css">
     <title><%= htmlWebpackPlugin.options.title %></title>
@@ -15,6 +16,7 @@
     <link rel="manifest" href="<%= BASE_URL %>site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <script type="module" src="https://googlechromelabs.github.io/dark-mode-toggle/src/dark-mode-toggle.mjs"></script>
 </head>
 <body>
 <noscript>
